--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "faunadb": "^4.4.1",
     "next": "10.2.3",
     "next-auth": "^3.29.0",
     "react": "17.0.2",
