--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.32.0",
+    "axios": "^0.27.2",
     "faunadb": "^4.6.0",
     "next": "10.2.3",
     "next-auth": "^3.29.0",
